fix link styles n dark mode

--- a/source/_assets/css/base.css
+++ b/source/_assets/css/base.css
@@ -6,7 +6,7 @@ a {
     @apply font-semibold;
     @apply no-underline;
     @apply text-blue-700 dark:text-blue-500;
-    @apply hover:text-blue-900 dark:hover:text-blue-700;
+    @apply hover:text-blue-400 dark:hover:text-yellow-500;
 }
 
 blockquote {
